--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 		</style>
 	</head>
 	<body style="padding-bottom:200px; font-family: 'Montaga', serif;">
-		<h1 style="text-align:center;font-size: 65px;">#BlueFall</h1>
+		<h1 style="text-align:center;font-size: 65px;">I Just Got BANNED From Rice University For Some Words (My Alma Mater) Criminal Trespass Warning</h1>
 		<div>
 			<center>
-				<iframe class="video" style="width:94%" src="https://www.youtube.com/embed/REPLACE-ME" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+				<iframe class="video" style="width:94%" src="https://www.youtube.com/embed/wX9aIB2u_Sc" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
 			</center>
 		</div>
 		<div style="text-align:center; font-size:22px">
-			Watch on YouTube: <a href="https://youtu.be/REPLACE-ME">https://youtu.be/REPLACE-ME</a><br/>
+			Watch on YouTube: <a href="https://youtu.be/wX9aIB2u_Sc">https://youtu.be/wX9aIB2u_Sc</a><br/>
 		</div>
 	</body>
 </html> 
